--- a/kubernetes/mealie/deployment.yaml
+++ b/kubernetes/mealie/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: mealie
     spec:
       containers:
-      - image: ghcr.io/mealie-recipes/mealie:latest
+      - image: ghcr.io/mealie-recipes/mealie:v2.4.2
         name: mealie
         ports: 
           - containerPort: 9000
