--- a/kubernetes/mealie/deployment.yaml
+++ b/kubernetes/mealie/deployment.yaml
@@ -22,4 +22,12 @@ spec:
         name: mealie
         ports: 
           - containerPort: 9000
+        volumeMounts:
+        - mountPath: "/app/data"
+          name: mealie-storage
 
+
+      volumes:
+      - name: mealie-storage
+        persistentVolumeClaim:
+          claimName: mealie-data
