feat(homarr): values.yml changes

--- a/kubernetes/homarr/values.yml
+++ b/kubernetes/homarr/values.yml
@@ -1,5 +1,7 @@
 # Number of replicas
 replicaCount: 2
+podLabels:
+  hello: world 
 persistence:
   - name: homarr-config
     # -- Enable homarr-config persistent storage
