--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -1,19 +1,19 @@
 ---
-- name: update the system
+# - name: update the system
+#   hosts: all
+#   become: true
+#   tasks:
+#     - name: update apt cache
+#       apt:
+#         update_cache: yes
+
+#     - name: upgrade all packages
+#       apt:
+#         upgrade: dist
+- name: install k3s cluster
   hosts: all
   become: true
   tasks:
-    - name: update apt cache
-      apt:
-        update_cache: yes
-
-    - name: upgrade all packages
-      apt:
-        upgrade: dist
-    - name: install k3s cluster
-      hosts: all
-      become: true
-      tasks:
-        - name: install k3s
-          shell: |
-            curl -sfL https://get.k3s.io | sh -
+    - name: install k3s
+      shell: |
+        curl -sfL https://get.k3s.io | sh -
