fix(deploy.yaml): add condition to install k3s only on Ubuntu

--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -17,3 +17,4 @@
     - name: install k3s
       shell: |
         curl -sfL https://get.k3s.io | sh -
+      when: ansible_facts['os_release'] == "Ubuntu"
