--- a/python/lofi-google-chrome-extension/manifest.json
+++ b/python/lofi-google-chrome-extension/manifest.json
@@ -3,16 +3,16 @@
   "name": "LoFi Playlist Player",
   "version": "1.0",
   "description": "Choose and listen to your favorite LoFi streams.",
-  "permissions": ["tabs"],
+  "permissions": [
+    "tabs"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "assets/icons/icon16.png",
-      "48": "assets/icons/icon48.png"
+      "16": "assets/icons/icon16.jpeg"
     }
   },
   "icons": {
-    "16": "assets/icons/icon16.png",
-    "48": "assets/icons/icon48.png"
+    "16": "assets/icons/icon16.jpeg"
   }
 }
