--- a/python/lofi-google-chrome-extension/manifest.json
+++ b/python/lofi-google-chrome-extension/manifest.json
@@ -1,18 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "LoFi Playlist Player",
+  "name": "Lofi Vibe Radio",
   "version": "1.0",
-  "description": "Choose and listen to your favorite LoFi streams.",
+  "description": "Your instant chill zone.",
   "permissions": [
-    "tabs"
+    "storage"
   ],
   "action": {
-    "default_popup": "popup.html",
     "default_icon": {
       "16": "assets/icons/icon16.jpeg"
     }
   },
+  "background": {
+    "service_worker": "background.js"
+  },
   "icons": {
-    "16": "assets/icons/icon16.jpeg"
+    "16": "assets/icons/images/icon16.png"
   }
 }
