feat: Change Vibe radio player and add Dockerfile

--- a/python/music-google-chrome-extension/manifest.json
+++ b/python/music-google-chrome-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Lofi Vibe Radio",
+  "name": "Vibe Radio",
   "version": "1.0",
   "description": "Your instant chill zone.",
   "permissions": [
