--- a/ansible/nginx/nginx.yaml
+++ b/ansible/nginx/nginx.yaml
@@ -3,6 +3,11 @@
   ansible.builtin.apt:
     name: nginx
     state: present
+# - name: Copy Nginx configuration
+#   become: true
+#   template:
+#     src: nginx.conf.j2
+#     dest: /etc/nginx/nginx.conf
 - name: Enable nginx service
   become: true
   service:
