--- a/grafana-k3s/k3s/k3s.yaml
+++ b/grafana-k3s/k3s/k3s.yaml
@@ -1,10 +1,13 @@
-- name: install k3s
-  shell: |
+- name: install k3s if missing
+  become: true
+  ansible.builtin.shell: |
     curl -sfL https://get.k3s.io | sh -
-  changed_when: false # Prevents Ansible from marking the task as changed every time it runs
+  args:
+    creates: /usr/local/bin/k3s
+
 - name: fetch kubeconfig to /tmp/kubeconfig
   become: true
-  ansible.builtin.fetch: # retrieves files from remote hosts
+  ansible.builtin.fetch:
     src: /etc/rancher/k3s/k3s.yaml
     dest: /tmp/
     flat: yes
