--- a/golang/tasks.json
+++ b/golang/tasks.json
@@ -16,7 +16,7 @@
   {
     "id": "3",
     "body": "mim",
-    "status": "todo",
+    "status": "in-progress",
     "createdAt": "2025-07-13 21:10:34.624429408 +0100 WEST m=+0.000103748",
     "updatedAt": "2025-07-13 21:10:34.624450485 +0100 WEST m=+0.000124827"
   }
