feat: implement task deletion and update functionality in task-cli

--- a/golang/tasks.json
+++ b/golang/tasks.json
@@ -1,23 +1,9 @@
 [
   {
     "id": "1",
-    "body": "hello",
+    "body": "Buy groceries",
     "status": "todo",
-    "createdAt": "2025-07-13 21:10:27.881803394 +0100 WEST m=+0.001725224",
-    "updatedAt": "2025-07-13 21:10:27.881863445 +0100 WEST m=+0.001785276"
-  },
-  {
-    "id": "2",
-    "body": "test",
-    "status": "todo",
-    "createdAt": "2025-07-13 21:10:31.726170797 +0100 WEST m=+0.000104910",
-    "updatedAt": "2025-07-13 21:10:31.726192994 +0100 WEST m=+0.000127108"
-  },
-  {
-    "id": "3",
-    "body": "mim",
-    "status": "in-progress",
-    "createdAt": "2025-07-13 21:10:34.624429408 +0100 WEST m=+0.000103748",
-    "updatedAt": "2025-07-13 21:10:34.624450485 +0100 WEST m=+0.000124827"
+    "createdAt": "2025-07-15 15:10:10.440466189 +0100 WEST m=+0.000120303",
+    "updatedAt": "2025-07-15 15:10:10.440544584 +0100 WEST m=+0.000198692"
   }
 ]
