--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -85,5 +85,7 @@ Vagrant.configure("2") do |config|
      sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
      scp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
      kubectl get pods
+     wget https://github.com/derailed/k9s/releases/latest/download/k9s_linux_amd64.deb
+     sudo apt install ./k9s_linux_amd64.deb
    SHELL
 end
