--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -12,7 +12,27 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "ubuntu/jammy64"
+
+  # Ubuntu VM
+  config.vm.define "lab-ubuntu-jammy" do |machine|
+    machine.vm.box = "ubuntu/jammy64"
+    machine.vm.hostname = "lab-ubuntu-jammy"
+    machine.vm.network "private_network", ip: "192.168.56.14"
+    machine.vm.provision "shell", inline: <<-SHELL
+     apt-get update
+     sudo apt install -y apt-transport-https ca-certificates curl software-properties-common
+     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+     sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
+     sudo apt install -y docker-ce
+     sudo systemctl start docker
+     curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
+     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+     sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+     cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
+     chmod 600 /home/vagrant/.kube/config # Restrict permissions
+     kubectl get pods
+   SHELL
+  end
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -32,7 +52,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-   config.vm.network "private_network", ip: "192.168.56.14"
+   
 # Set the VM name for easier identification in VirtualBox
    config.vm.provider "virtualbox" do |vb|
      vb.name = "lab-ubuntu-jammy"
@@ -41,7 +61,6 @@ Vagrant.configure("2") do |config|
   # Bridged networks make the machine appear as another physical device on
   # your network.
 #    config.vm.network "public_network"
-  config.ssh
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
@@ -66,26 +85,4 @@ Vagrant.configure("2") do |config|
      vb.memory = "1600"
         vb.cpus = "2"
    end
-# The following line disables the default synced folder, which can cause issues on Windows hosts.
-# If you need to share folders, configure them explicitly below.
-  # View the documentation for the provider you are using for more
-  # information on available options.
-   config.vm.synced_folder '.', '/vagrant', disabled: true
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-
-  config.vm.provision "shell", inline: <<-SHELL
-     apt-get update
-     apt-get install -y docker.io
-     curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
-     sudo k3d cluster create
-     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-     sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-     scp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
-     kubectl get pods
-     wget https://github.com/derailed/k9s/releases/latest/download/k9s_linux_amd64.deb
-     sudo apt install ./k9s_linux_amd64.deb
-   SHELL
 end
