--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -28,8 +28,9 @@ Vagrant.configure("2") do |config|
      curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
      curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
      sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-     cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
-     chmod 600 /home/vagrant/.kube/config # Restrict permissions
+     sudo mkdir -p /home/vagrant/.kube
+     sudo cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
+     sudo chmod 607 /home/vagrant/.kube/config # Restrict permissions
      kubectl get pods
    SHELL
   end
