--- a/vagrant/docker-playground/Vagrantfile
+++ b/vagrant/docker-playground/Vagrantfile
@@ -25,13 +25,16 @@ Vagrant.configure("2") do |config|
      sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
      sudo apt install -y docker-ce
      sudo systemctl start docker
-     curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
-     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-     sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-     sudo mkdir -p /home/vagrant/.kube
-     sudo cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
-     sudo chmod 607 /home/vagrant/.kube/config # Restrict permissions
-     kubectl get pods
+     sudo usermod -aG docker $USER
+     newgrp docker  
+
+     # curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
+     # curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+     # sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+     # sudo mkdir -p /home/vagrant/.kube
+     # sudo cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
+     # sudo chmod 607 /home/vagrant/.kube/config # Restrict permissions
+     # kubectl get pods
    SHELL
   end
 
@@ -83,7 +86,7 @@ Vagrant.configure("2") do |config|
      vb.gui = true
      vb.customize [ "modifyvm", :id, "--uartmode1", "disconnected" ]
   #   # Customize the amount of memory on the VM:
-     vb.memory = "1600"
+     vb.memory = "3000"
         vb.cpus = "2"
    end
 end
