--- a/helm/nginx/nginx-example/templates/configmap.yml
+++ b/helm/nginx/nginx-example/templates/configmap.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-name: {{ .Values.configMap.name }}
+name: {{ default (include "my-nginx-chart.fullname" .) .Values.configMap.name }}
   namespace: default
 data:
     {{- range $key, $val := .Values.configMap.data }}
