feat: add labels to ConfigMap metadata and update common labels definition

--- a/helm/nginx-example/templates/configmap.yml
+++ b/helm/nginx-example/templates/configmap.yml
@@ -4,6 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ .Values.configMap.name }}
   namespace: default
+  labels:
+     {{- include "nginx-example.labels" . | nindent 4}}
 data:
     {{- range $key, $val := .Values.configMap.data }}
     {{ $key }}: {{ $val | quote }}
