feat: add external secret configuration to nginx-example Helm chart

--- a/helm/nginx-example/values.yaml
+++ b/helm/nginx-example/values.yaml
@@ -51,6 +51,13 @@ service:
   type: ClusterIP
   port: 80
 
+externalSecret:
+  enabled: true
+  secretStoreRef: "my-secret-store"
+  secretName: "nginx-secret"
+  data:
+    username: "admin"
+    password: "admin" # testing only
 ingress:
   enabled: true
   className: ""
