feat: add Azure infrastructure configuration for Kubernetes cluster and virtual machine setup

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ google-cloud/private-gke/terraform.tfstate.d/dev/.terraform.tfstate.lock.info
 terraform.tfstate.backup
 .terraform.tfstate
 .terrafmrom.tfstate.*
+.terraform.tfstate.lock.info
 myenv
 venv
 beam
