feat: fix Dockerifle , remove package versions

--- a/vertex-ai/iris_custom_training_artifact_registry/Dockerfile
+++ b/vertex-ai/iris_custom_training_artifact_registry/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.7-buster
 WORKDIR /root
 COPY vertexai_custom_training.py /root/vertexai_custom_training.py
 COPY requirements.txt /root/requirements.txt
-RUN pip install -r /root/requirements
+RUN pip install -r /root/requirements.txt
 
 ENTRYPOINT ["python","vertexai_custom_training.py"]
