--- a/vertex-ai/iris_custom_training_artifact_registry/requirements.txt
+++ b/vertex-ai/iris_custom_training_artifact_registry/requirements.txt
@@ -1,5 +1,5 @@
-pandas==1.3.5
-scikit-learn==1.7.2
-google-cloud-aiplatform==1.112.0
-fsspec==2025.9.0
-gcsfs==2025.9.0
+pandas
+scikit-learn
+google-cloud-aiplatform
+fsspec
+gcsfs
