--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -39,7 +39,10 @@ Vagrant.configure("2") do |config|
    
 # Set the VM name for easier identification in VirtualBox
    config.vm.provider "virtualbox" do |vb|
-     vb.name = "prod-cluster"
+     vb.name = "server-vm"
+  end
+  config.vm.provider "virtualbox" do |vb|
+     vb.name = "client-vm"
   end
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -87,46 +90,7 @@ Vagrant.configure("2") do |config|
      set -e  # Exit on any error
      
      echo "Starting provisioning..."
-     apt-get update
-     apt-get install -y docker.io curl wget
-     
-     # Add vagrant user to docker group
-     usermod -aG docker vagrant
-     
-     echo "Installing k3s..."
-     curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
-     
-     # Wait for k3s to be ready
-     sleep 30
-     
-     echo "Setting up kubectl..."
-     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-     sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-     
-     # Setup kubectl config for vagrant user
-     mkdir -p /home/vagrant/.kube
-     cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
-     chown -R vagrant:vagrant /home/vagrant/.kube
-     chmod 600 /home/vagrant/.kube/config
-     
-     echo "Installing k9s..."
-     wget -q https://github.com/derailed/k9s/releases/latest/download/k9s_linux_amd64.deb
-     apt install -y ./k9s_linux_amd64.deb
-     
-     echo "Installing Flux CLI..."
-     curl -s https://fluxcd.io/install.sh | sudo bash
-     
-     echo "Installing git and cloning repository..."
-     apt install -y git
-     
-     # Clone as vagrant user to proper location
-     sudo -u vagrant git clone https://github.com/diogoguedes11/homelab.git /home/vagrant/homelab
-     
-     echo "Provisioning complete!"
-     echo "To complete Flux setup, SSH into the VM and run:"
-     cd /home/vagrant/homelab
-     # import GITHUB token
-     read -s -p "Enter your GitHub token: " GITHUB_TOKEN; export GITHUB_TOKEN
-     flux bootstrap github --owner=diogoguedes11 --repository=homelab --branch=main --path=./clusters/data --personal
+     sudo apt-get update -y
+     sudo apt-get upgrade -y
      SHELL
 end
