--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -37,13 +37,16 @@ Vagrant.configure("2") do |config|
    # Increase boot timeout for slower systems
    config.vm.boot_timeout = 600
    
-# Set the VM name for easier identification in VirtualBox
-   config.vm.provider "virtualbox" do |vb|
-     vb.name = "server-vm"
-  end
-  config.vm.provider "virtualbox" do |vb|
-     vb.name = "client-vm"
-  end
+    config.vm.define "server-vm" do |server|
+        server.vm.box = "ubuntu/focal64"
+        server.vm.name = "server-vm"
+        server.vm.hostname = "server-vm"
+    end
+    config.vm.define "client-vm" do |client|
+        client.vm.box = "ubuntu/focal64"
+        client.vm.name = "client-vm"
+        client.vm.hostname = "client-vm"
+    end
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
@@ -92,5 +95,6 @@ Vagrant.configure("2") do |config|
      echo "Starting provisioning..."
      sudo apt-get update -y
      sudo apt-get upgrade -y
+     sudo loadkeys pt
      SHELL
 end
