--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -39,13 +39,22 @@ Vagrant.configure("2") do |config|
    
     config.vm.define "server-vm" do |server|
         server.vm.box = "ubuntu/focal64"
-        server.vm.name = "server-vm"
         server.vm.hostname = "server-vm"
+        server.vm.provider "virtualbox" do |vb|
+            vb.memory = "1024"
+            vb.cpus = "1"
+            vb.name = "server-vm"
+        end
     end
     config.vm.define "client-vm" do |client|
         client.vm.box = "ubuntu/focal64"
-        client.vm.name = "client-vm"
         client.vm.hostname = "client-vm"
+        client.vm.provider "virtualbox" do |vb|
+            vb.memory = "1024"
+            vb.cpus = "1"
+            vb.name = "client-vm"
+        end
+
     end
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
