--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -29,10 +29,6 @@ Vagrant.configure("2") do |config|
   # within the machine from a port on the host machine and only allow access
   # via 127.0.0.1 to disable public access
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-   config.vm.network "private_network", ip: "192.168.56.14"
    
    # Increase boot timeout for slower systems
    config.vm.boot_timeout = 600
@@ -40,6 +36,7 @@ Vagrant.configure("2") do |config|
     config.vm.define "server-vm" do |server|
         server.vm.box = "ubuntu/focal64"
         server.vm.hostname = "server-vm"
+        server.vm.network "private_network", ip: "192.168.56.14"
         server.vm.provider "virtualbox" do |vb|
             vb.memory = "1024"
             vb.cpus = "1"
@@ -49,10 +46,12 @@ Vagrant.configure("2") do |config|
     config.vm.define "client-vm" do |client|
         client.vm.box = "ubuntu/focal64"
         client.vm.hostname = "client-vm"
+        server.vm.network "private_network", ip: "192.168.56.15"
         client.vm.provider "virtualbox" do |vb|
             vb.memory = "1024"
             vb.cpus = "1"
             vb.name = "client-vm"
+            
         end
 
     end
