--- a/vagrant/flux-cluster/Vagrantfile
+++ b/vagrant/flux-cluster/Vagrantfile
@@ -1,88 +1,22 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
+  config.vm.box_check_update = false
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "ubuntu/focal64"
-
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-   config.vm.network "private_network", ip: "192.168.56.14"
-   
-   # Increase boot timeout for slower systems
-   config.vm.boot_timeout = 600
-   
-# Set the VM name for easier identification in VirtualBox
-   config.vm.provider "virtualbox" do |vb|
-     vb.name = "prod-cluster"
+  config.vm.define "cluster" do |cluster|
+    cluster.vm.hostname = "cluster"
+    cluster.vm.box = "ubuntu/focal64"
+    cluster.vm.network :private_network, ip: "10.0.0.102"
   end
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-#    config.vm.network "public_network"
   config.ssh
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-
-  # Windows Path
-  # config.vm.synced_folder "F:\\scripts\\shellscripts", "/opt/scripts"
-
-  # MacOS
-  #  config.vm.synced_folder "/Users/imran/Desktop/scripts", "/opt/scripts"
-
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-   config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-     vb.gui = true
-     vb.customize [ "modifyvm", :id, "--uartmode1", "disconnected" ]
-     # Add these optimizations for faster boot
-     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
-     vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
-  #   # Customize the amount of memory on the VM:
-     vb.memory = "2048"
-     vb.cpus = "2"
-   end
-# The following line disables the default synced folder, which can cause issues on Windows hosts.
-# If you need to share folders, configure them explicitly below.
-  # View the documentation for the provider you are using for more
-  # information on available options.
-   config.vm.synced_folder '.', '/vagrant', disabled: true
+  config.vm.synced_folder '.', '/vagrant', disabled: true
 
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-
+  config.vm.provider "virtualbox" do |vb|
+     vb.gui = false
+     vb.memory = "2048"
+     vb.cpus = 2
+  end
   config.vm.provision "shell", inline: <<-SHELL
      set -e  # Exit on any error
      
@@ -92,7 +26,7 @@ Vagrant.configure("2") do |config|
      
      # Add vagrant user to docker group
      usermod -aG docker vagrant
-     
+     sudo ufw disable
      echo "Installing k3s..."
      curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable=helm-controller" sh
      
@@ -102,13 +36,13 @@ Vagrant.configure("2") do |config|
      echo "Setting up kubectl..."
      curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
      sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-     
+     alias k="kubectl"
      # Setup kubectl config for vagrant user
      mkdir -p /home/vagrant/.kube
      cp /etc/rancher/k3s/k3s.yaml /home/vagrant/.kube/config
      chown -R vagrant:vagrant /home/vagrant/.kube
      chmod 600 /home/vagrant/.kube/config
-     
+    
      echo "Installing k9s..."
      wget -q https://github.com/derailed/k9s/releases/latest/download/k9s_linux_amd64.deb
      apt install -y ./k9s_linux_amd64.deb
@@ -118,15 +52,14 @@ Vagrant.configure("2") do |config|
      
      echo "Installing git and cloning repository..."
      apt install -y git
-     
-     # Clone as vagrant user to proper location
-     sudo -u vagrant git clone https://github.com/diogoguedes11/homelab.git /home/vagrant/homelab
-     
-     echo "Provisioning complete!"
-     echo "To complete Flux setup, SSH into the VM and run:"
-     cd /home/vagrant/homelab
-     # import GITHUB token
-     read -s -p "Enter your GitHub token: " GITHUB_TOKEN; export GITHUB_TOKEN
-     flux bootstrap github --owner=diogoguedes11 --repository=homelab --branch=main --path=./clusters/data --personal
+     export GITHUB_TOKEN="${GITHUB_TOKEN}"
+     flux bootstrap github \
+        --owner=diogoguedes11 \
+        --repository=homelab \
+        --branch=main \
+        --path=./clusters/data \
+        --personal=true
      SHELL
 end
+
+ 
