--- a/vagrant/flux-cluster/Vagrantfile
+++ b/vagrant/flux-cluster/Vagrantfile
@@ -52,14 +52,8 @@ Vagrant.configure("2") do |config|
      
      echo "Installing git and cloning repository..."
      apt install -y git
-     export GITHUB_TOKEN="${GITHUB_TOKEN}"
-     flux bootstrap github \
-        --owner=diogoguedes11 \
-        --repository=homelab \
-        --branch=main \
-        --path=./clusters/data \
-        --personal=true
-     SHELL
+     kubectl apply --server-side -f https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/release-1.27/releases/cnpg-1.27.0.yaml   
+         
 end
 
  
