--- a/vagrant/flux-cluster/Vagrantfile
+++ b/vagrant/flux-cluster/Vagrantfile
@@ -53,7 +53,10 @@ Vagrant.configure("2") do |config|
      echo "Installing git and cloning repository..."
      apt install -y git
      kubectl apply --server-side -f https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/release-1.27/releases/cnpg-1.27.0.yaml   
-         
+     # install argocd
+     kubectl create namespace argocd
+     kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+     SHELL
 end
 
  
