--- a/vagrant/k8s-cluster/Vagrantfile
+++ b/vagrant/k8s-cluster/Vagrantfile
@@ -3,8 +3,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "cluster" do |cluster|
     cluster.vm.hostname = "cluster"
-    cluster.vm.box = "ubuntu/focal64"
-    cluster.vm.network :private_network, ip: "10.0.0.102"
+    cluster.vm.box = "ubuntu/bionic64"
+    cluster.vm.network :private_network, ip: "192.168.56.10"
   end
   config.ssh
   config.vm.synced_folder '.', '/vagrant', disabled: true
@@ -13,15 +13,14 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provider "virtualbox" do |vb|
-     vb.gui = false
+     vb.gui = true
      vb.memory = "2048"
      vb.cpus = 2
   end
   config.vm.provision "shell", inline: <<-SHELL
      set -e  # Exit on any error
      
-     echo "Starting provisioning..."
-     apt-get update
+     echo "Starting provisioning..."     apt-get update
      apt-get install -y docker.io curl wget
      
      # Add vagrant user to docker group
@@ -32,7 +31,18 @@ Vagrant.configure("2") do |config|
      
      # Wait for k3s to be ready
      sleep 30
-     
+     # install desktop environment
+     sudo apt install -y --no-install-recommends ubuntu-desktop
+     sudo apt install -y --no-install-recommends virtualbox-guest-dkms virtualbox-guest-utils virtualbox-guest-x11
+     # Install browser
+     wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub|sudo apt-key add -
+     sudo sh -c 'echo \"deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main\" > /etc/apt/sources.list.d/google.list'
+     sudo apt update -y
+     sudo apt upgrade -y
+     sudo usermod -a -G sudo vagrant
+     sudo apt install -y google-chrome-stable
+
+        
      echo "Setting up kubectl..."
      curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
      sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
@@ -47,12 +57,7 @@ Vagrant.configure("2") do |config|
      wget -q https://github.com/derailed/k9s/releases/latest/download/k9s_linux_amd64.deb
      apt install -y ./k9s_linux_amd64.deb
      
-     echo "Installing Flux CLI..."
-     curl -s https://fluxcd.io/install.sh | sudo bash
-     
-     echo "Installing git and cloning repository..."
      apt install -y git
-     kubectl apply --server-side -f https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/release-1.27/releases/cnpg-1.27.0.yaml   
      # install argocd
      kubectl create namespace argocd
      kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
