--- a/monitoring-prometheus-docker/docker-compose.yaml
+++ b/monitoring-prometheus-docker/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
 services:
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
+    container_name:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -28,6 +28,8 @@ services:
     container_name: grafana
     ports:
       - "3000:3000"
+    depends_on:
+      - prometheus
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
