--- a/monitoring-prometheus-docker/docker-compose.yaml
+++ b/monitoring-prometheus-docker/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
 services:
   prometheus:
     image: prom/prometheus:latest
-    container_name:
+    container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
