--- a/monitoring-prometheus-docker/python-application/dockerfile
+++ b/monitoring-prometheus-docker/python-application/dockerfile
@@ -1,12 +1,30 @@
-FROM python:3.13-alpine AS prod
+FROM python:3.13-alpine AS builder
 
-RUN mkdir /app/
-WORKDIR /app/
+WORKDIR /app
 
-COPY ./src/requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+COPY ./src/requirements.txt .
 
-COPY ./src/ /app/
+# Install build dependencies and build wheels
+RUN apk add --no-cache build-base \
+    && pip wheel --wheel-dir=/wheels -r requirements.txt
 
-ENV FLASK_APP=server.py
-CMD flask run -h 0.0.0 -p 5000
+FROM python:3.13-alpine
+
+WORKDIR /app
+
+# Add a non-root user
+RUN adduser -D appuser
+
+# Install runtime dependencies only
+COPY --from=builder /wheels /wheels
+COPY ./src/requirements.txt .
+RUN pip install --no-cache-dir --find-links=/wheels -r requirements.txt \
+    && rm -rf /wheels
+
+COPY ./src/ .
+
+ENV FLASK_APP=server
+
+USER appuser
+
+CMD ["flask", "run", "-h", "0.0.0.0", "-p", "5000"]
