feat: update BGP configuration for routers r1 and r2 to include route redistribution

--- a/05-networking/scripts/frr/r1/frr.conf
+++ b/05-networking/scripts/frr/r1/frr.conf
@@ -13,5 +13,6 @@ router bgp 65001
   neighbor 192.255.255.2 prefix-list ALLOW-ALL in
   neighbor 192.255.255.2 prefix-list ALLOW-ALL out
   network 192.255.255.0/24
+  redistribute connected
  exit-address-family
 !
